# wasm-bridge-example

./: README.md  flake.nix  protocol.wit
.github/workflows/: ci.yml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs
