[package]
name = "host"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasm-bridge = { git = "https://github.com/kajacx/wasm-bridge", features = ["async", "component-model"] }
wasm-bridge-wasi = { git = "https://github.com/kajacx/wasm-bridge" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.41"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt"] }
